2002-02-25  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* gen/GenBind.hs: debugging

2002-02-24  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* chs/CHS.hs (parseOptAs): `^' as synonym for previous identifier,
	but with underscores rewritten to caps

	* chs/CHSLexer.hs: added `CHSTokHat'

2002-02-23  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* lib/C2HSMarsh.hs: added some more convenience functions

2002-02-21  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* gen/GenBind.hs: Completed processing of function hooks

2002-02-18  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* chs/CHSLexer.hs: Added `CHSTokMinus'

	* chs/CHS.hs: Revised the syntax of fun hooks

	* chs/CHSLexer.hs: Added `CHSTokAmp' (representing `&')

	* gen/GenBind.hs (foreignImport): factorised the code for call
	hook generation to make those portions that are also useful for
	fun hooks reusable
	(expandHook): implemented fun hooks

	* gen/GBMonad.hs: extracted monad-related code from `GenBind.hs'

	* gen/GenBind.hs: split off the monad definition and operations
	into `GBMonad.hs'

2002-02-17  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* chs/CHSLexer.hs: introduced `hsverb' tokens

	* chs/CHS.hs: `pure' instead of `fun' to indicate calls to pure
	C functions (`fun' retained for backwards compatibility)

	* chs/CHSLexer.hs: introduced the keyword `pure'

2002-02-13  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* Makefile: adapted to using GHC package management

2002-02-11  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* lib/Makefile (depend): increase portability

2002-02-06  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* configure.in: probe for `grep'

2002-02-05  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* aclocal.m4 (CTK_GHC_VERSION): no \+ in sed on Solaris

	* toplevel/Version.hs (versnum): 0.10.7

2002-01-15  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* gen/GenBind.hs (mergeMaps): now, the read map overrides any