@@ -4,11 +4,11 @@ where
 -- version number is major.minor.patchlvl; don't change the format of the
 -- `versnum' line as it is `grep'ed for by a Makefile
 --
-idstr      = "$Id: Version.hs,v 1.58 2002/02/25 06:19:56 chak Exp $"
+idstr      = "$Id: Version.hs,v 1.59 2002/03/03 07:05:04 chak Exp $"
 name       = "C->Haskell Compiler"
-versnum    = "0.10.8"
+versnum    = "0.10.9"
 versnick   = "\"Altocumulus Stratiformis Perlucidus Undulatus\""
-date	   = "25 Feb 2002"
+date	   = "03 Mar 2002"
 version    = name ++ ", version " ++ versnum ++ " " ++ versnick ++ ", " ++ date
 copyright  = "Copyright (c) [1999..2002] Manuel M T Chakravarty"
 disclaimer = "This software is distributed under the \
